lag on physiks simulation #61124

Closed
opened 2019-02-02 03:21:57 +01:00 by Mark · 5 comments

System Information
Operating system: win 10
Graphics card: gtx 980

Blender Version
Broken: 2.8, 4ef09cf937

Short description of error
A soft body modifier added to an object, animated and grabbed reacts one or two seconds later after the cursor moved to a new position. When moved to fast the object
will stop following the cursor and also will loose its soft body physics until the user stops the play button and places the cursor at the start of the animation timeline.
This worked just fine in 2.79 without any lag or freezing

Exact steps for others to reproduce the error
Open a new file with the default cube in the middle,
put a subdivision surface modifier on it and set the value of view to two and apply.
After that add a new vertex group,
go to weight painting mode and use the gradient tool to set a gradient from top to bottom so that only a bit dark blue is left at the bottom.
After this, add a Softbody modifier under the Physics tab and under Goal set the applied vertex group, Damping to 50 Default to 1 and min to 0,9.
Now when the play button is pressed in object mode, followed by the g button the object will only follow after one or two seconds while fps is consistent around 30 fps

**System Information** Operating system: win 10 Graphics card: gtx 980 **Blender Version** Broken: 2.8, 4ef09cf937f2 **Short description of error** A soft body modifier added to an object, animated and grabbed reacts one or two seconds later after the cursor moved to a new position. When moved to fast the object will stop following the cursor and also will loose its soft body physics until the user stops the play button and places the cursor at the start of the animation timeline. This worked just fine in 2.79 without any lag or freezing **Exact steps for others to reproduce the error** Open a new file with the default cube in the middle, put a subdivision surface modifier on it and set the value of view to two and apply. After that add a new vertex group, go to weight painting mode and use the gradient tool to set a gradient from top to bottom so that only a bit dark blue is left at the bottom. After this, add a Softbody modifier under the Physics tab and under Goal set the applied vertex group, Damping to 50 Default to 1 and min to 0,9. Now when the play button is pressed in object mode, followed by the g button the object will only follow after one or two seconds while fps is consistent around 30 fps
Author

Added subscriber: @Redex95

Added subscriber: @Redex95

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-04 12:22:39 +01:00
[softbody.blend](https://archive.blender.org/developer/F6505202/softbody.blend)

This issue was referenced by a6ef823ac4

This issue was referenced by a6ef823ac4686d1dfcb04b49344e4a7c09d378a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61124
No description provided.